<resources>
    <string name="app_name">SisCol</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="siscol">SisCol - Sistema de Gerenciamento Escolar</string>
    <string name="aluno">Aluno</string>
    <string name="professor">Professor</string>
    <string name="diretor">Diretor</string>
    <string name="funcionario">Funcionario</string>
    <string name="notas">Notas</string>
    <string name="cadastro">Cadastro</string>
    <string name="nome">Nome</string>
    <string name="rg">RG</string>
    <string name="serie">Serie</string>
    <string name="matricula">Matricula</string>
    <string name="Disciplina">Disciplina</string>
    <string name="title_activity_aluno">AlunoActivity</string>
    <string name="salvar">Salvar</string>
    <string name="salvo">Salvo com sucesso!</string>
    <string name="frequencia">Frequencia</string>
</resources>
