<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item android:title="@string/cadastro">
            <menu>
                <item
                    android:id="@+id/nav_aluno"
                    android:icon="@android:drawable/ic_menu_save"
                    android:title="@string/aluno" />
                <item
                    android:id="@+id/nav_professor"
                    android:icon="@android:drawable/ic_menu_save"
                    android:title="@string/professor" />
                <item
                    android:id="@+id/nav_diretor"
                    android:icon="@android:drawable/ic_menu_save"
                    android:title="@string/diretor" />
                <item
                    android:id="@+id/nav_funcionario"
                    android:icon="@android:drawable/ic_menu_save"
                    android:title="@string/funcionario" />
            </menu>
        </item>
    </group>

    <item android:title="@string/notas">
        <menu>
            <item
                android:id="@+id/nav_view_aluno"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_view_professor"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>

</menu>
